--- a/src/styles.less
+++ b/src/styles.less
@@ -4,18 +4,28 @@ h1 {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 250%;
 }
+
 h2, h3 {
   color: #444;
   font-family: Arial, Helvetica, sans-serif;
   font-weight: lighter;
 }
+
 body {
   margin: 2em;
 }
+
 body, input[type="text"], button {
   color: #333;
-  font-family: Cambria, Georgia;
 }
+
+input[type="text"] {
+  -webkit-appearance: none;
+  padding: 5px;
+  border-radius: 5px;
+  border: 2px solid #dfe6e9;
+}
+
 /* everywhere else */
 * {
   font-family: Arial, Helvetica, sans-serif;
