--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,9 @@
 <div>
   <h1>{{title}}</h1>
-  <app-items></app-items>
+  <nav class="navigation">
+    <a routerLink="/" routerLinkActive="active-link">Home</a>
+    <a routerLink="/items" routerLinkActive="active-link">Items</a>
+  </nav>
+  <router-outlet></router-outlet>
+  <app-messages></app-messages>
 </div>
