--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -1,22 +1,16 @@
-/* Application-wide Styles */
-h1 {
-  color: #369;
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 250%;
-}
-h2, h3 {
-  color: #444;
-  font-family: Arial, Helvetica, sans-serif;
-  font-weight: lighter;
-}
-body {
-  margin: 2em;
-}
-body, input[type="text"], button {
-  color: #333;
-  font-family: Cambria, Georgia;
-}
-/* everywhere else */
-* {
-  font-family: Arial, Helvetica, sans-serif;
+.navigation {
+  margin-bottom: 20px;
+
+  a {
+    margin-right: 5px;
+    padding: 5px;
+    border-radius: 5px;
+    text-decoration: none;
+    color: white;
+    background: #636e72;
+
+    &.active-link {
+      background: black;
+    }
+  }
 }
